--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -8,8 +8,8 @@ import Oscp from "@assets/oscp.svg";
     <div class="flex flex-col ml-2 mb-16">
       <h1 class="text-4xl mb-8">Friends</h1>
       <p class="text-xl text-justify">
-        Here you can find a list of my higly valued friends and contacts that I
-        higligh recommend you to follow.
+        Here is a list of some of my valued friends and contacts that I highly
+        recommend you follow.
       </p>
     </div>
     Loading other dino-friends <span class="loading loading-dots loading-sm"
