--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,7 +95,7 @@ try {
     class="mx-auto px-2 flex w-fit justify-between lg:mt-18 lg:ml-7 xl:ml-12 2xl:ml-16 3xl:mx-auto 2xl:gap-6 3xl:gap-12"
   >
     <Presentation
-      class="card-basic sticky 4xl:mr-25 top-25 grid h-fit w-auto max-w-110 min-w-85 place-items-center gap-5 max-lg:hidden md:mx-auto drop-shadow-md drop-shadow-primary/25"
+      class="card-basic sticky py-7 4xl:mr-25 top-25 grid h-fit w-auto max-w-110 min-w-85 place-items-center gap-5 max-lg:hidden md:mx-auto drop-shadow-md drop-shadow-primary/25"
     />
     <div
       class="relative mx-auto grid h-full w-fit max-w-210 grid-cols-7 content-center gap-4 px-2 sm:mx-5 lg:mt-1"
@@ -128,8 +128,7 @@ try {
           Ethical Hacker and I'm currently training to be an <span
             class="text-primary font-semibold">Appsec Engineer</span
           >! This is my personal website where you'll find all the latest posts
-          from my blog, along with my curriculum, projects and contact
-          information.
+          from my blog, projects and contact information.
           <br />
           <br />
           <span class="font-semibold text-primary text-center">
@@ -200,8 +199,6 @@ try {
           </div>
           <div class="flex flex-wrap justify-center gap-8 lg:px-5 text-left">
             <BlogPreview post={page.data[0]} />
-            <BlogPreview post={page.data[1]} />
-            <BlogPreview post={page.data[2]} />
           </div>
         </div>
         <style>
