--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -128,7 +128,7 @@
 
   --color-info: #5fb0f9;
   --color-info-content: #0d1214;
-  --color-success: #7ca342;
+  --color-success: #46b87b;
   --color-success-content: #f0f5f7;
   --color-warning: #c4972f;
   --color-warning-content: #0d1214;
