--- a/src/components/ui/home/Presentation.astro
+++ b/src/components/ui/home/Presentation.astro
@@ -53,14 +53,14 @@ const { class: className = "" } = Astro.props;
     <li
       class="hover:bg-primary transition-all duration-300 ease-in-out hover:scale-103"
     >
-      <a href="https://github.com/alehdezp" target="_blank">
+      <a href="https://x.com/alex8hp" target="_blank">
         <Icon name="mdi:twitter" class="h-full w-full" />
       </a>
     </li>
     <li
       class="hover:bg-primary transition-all duration-300 ease-in-out hover:scale-103"
     >
-      <a href="https://github.com/alehdezp" target="_blank">
+      <a href=`mailto:${siteConfig.social.email}` aria-label="Email">
         <Icon name="mdi:email-outline" class="h-full w-full" />
       </a>
     </li>
