--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -78,7 +78,9 @@ import backgroundImg from "@assets/background.jpg";
         <!--   class="p-8 pt-10 lg:pt-16 lg:max-w-5xl max-w-full mx-auto min-h-screen flex flex-col justify-between" -->
         <!-- > -->
         <!-- <main transition:animate={fade({ duration: ".18s" })}> -->
-        <main class="flex flex-col justify-between bg-primary/1 font-[500]">
+        <main
+          class="flex flex-col justify-between bg-primary/1 font-[500] mb-auto h-full"
+        >
           <!-- Page content -->
           <slot />
 
