--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -112,7 +112,7 @@
 
   /* --color-primary: #32ccc0; */
   --color-primary: #28c8bb;
-  --color-primary-content: #090b0a;
+  --color-primary-content: #072825;
 
   /* --color-secondary: #c7a9f9; */
   --color-secondary: #d4befa;
