--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@ import NavItem from "./ui/NavItem.astro";
 ---
 
 <aside
-  class="xs:w-[13rem] flex h-screen flex-col bg-primary/10 pt-4 text-base-content"
+  class="xs:w-[13rem] flex h-screen flex-col bg-primary-content pt-4 text-base-content"
 >
   <div class="my-8 flex h-full flex-col justify-between">
     <div>
