--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -17,7 +17,9 @@ const { title, date, tags, image } = post.data;
 ---
 
 <Layout title={title}>
-  <article class="max-w-210! w-full! text-wrap mx-auto px-6 md:px-8 mt-20">
+  <article
+    class="max-w-210! w-full! text-wrap mx-auto px-6 md:px-8 md:mt-20 mt-5"
+  >
     {
       image && (
         <img
