--- a/src/components/ui/home/TimeLine.astro
+++ b/src/components/ui/home/TimeLine.astro
@@ -20,10 +20,10 @@ const labelColor = [
     responsibilities={[
       "Validate and reproduce incoming bug bounty reports across the entire Salesforce ecosystem (including: MuleSoft, Slack, Heroku, Tableau), classify risk (CVSS and Salesforce standards) and assess business impact before escalating.",
       "Prioritize and route verified issues to the right teams, track remediation status and confirm fixes have been applied.",
-      "Maintain positive researcher relations: request clarifications, guide reproductions and close the feedback loop.",
+      "Maintain good relationships with researchers: ask for clarifications, guide reproductions and make sure the feedback loop is closed.",
       "Communicate technical issues clearly to engineers to ensure accurate understanding and prompt remediation.",
-      "Built Python/Bash scripts to automate bug intake, report formatting and CVSS scoring on our triage platform.",
-      "Developed Chrome and Burp Suite extensions to automate and accelerate the team's ability to triage and verify Salesforce vulnerabilities.",
+      "Built Python and Bash scripts to automate the intake of bugs, the reproduction of reports, and the integration with our triage platform.",
+      "Developed Chrome and Burp Suite extensions to automate and accelerate the team's ability to triage and verify vulnerabilities.",
       "Implemented tooling that integrate with Salesforce vulnerability tracking system to automatically log vulnerability data and trigger alerts for overdue remediations.",
     ]}
     tags={[
@@ -42,10 +42,10 @@ const labelColor = [
     position="middle"
     time="2019–2021"
     title="Cybersecurity Training & OSCP Certification"
-    summary="Dedicated time to deepening my expertise in ethical hacking, web application security, and penetration testing through hands-on labs and structured learning."
+    summary="During this period, I dedicated two years to learning about ethical hacking, web application security and penetration testing through hands-on labs and multiple online courses."
     descriptionList={[
       "Self-paced security training: web app hacking, network exploitation, reverse engineering and social-engineering basics.",
-      "Completed the OSCP certification, demonstrating hands-on skills in network penetration testing and exploit development .",
+      "Completed the OSCP certification, demonstrating hands-on skills in penetration testing.",
       "Practiced real-world exploitation using labs like Hack The Box, TryHackMe, and custom CTF environments.",
       "Gained familiarity with tools such as Burp Suite, ffuf/gobuster, advanced Nmap, Metasploit and Wireshark.",
       "Developed custom scripts for vulnerability scanning and exploitation proof-of-concepts (Python, Bash).",
@@ -63,7 +63,7 @@ const labelColor = [
       { label: "ffuf", color: labelColor[3] },
       { label: "gobuster", color: labelColor[2] },
     ]}
-    collapsedHeight={120}
+    collapsedHeight={110}
   />
 
   <TimeLineItem
