--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,10 @@ import backgroundImg from "@assets/background.jpg";
     />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
+    <!-- Preload critical font files for performance -->
+    <link rel="preload" href="/fonts/MPLUSRounded1c-Regular.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/MPLUSRounded1c-Medium.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/MPLUSRounded1c-Bold.woff2" as="font" type="font/woff2" crossorigin />
     <ClientRouter />
     <title>Astro-AleRaptor</title>
 
@@ -29,7 +33,7 @@ import backgroundImg from "@assets/background.jpg";
           localStorage.getItem("theme") ||
           (window.matchMedia("(prefers-color-scheme: dark)").matches
             ? "night"
-            : "sunset");
+            : "cisco-cool");
         document.documentElement.setAttribute("data-theme", savedTheme);
       })();
     </script>
