--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import CardPost from "@components/ui/CardPost.astro";
 import Presentation from "@components/ui/home/Presentation.astro";
 import { Icon } from "astro-icon/components";
 import TimeLine from "@components/ui/home/TimeLine.astro";
@@ -17,7 +16,7 @@ const skills = [
   { name: "automation", icon: "mdi:robot" },
   { name: "secure-code-review", icon: "mdi:code-braces" },
   { name: "hackerone", icon: "simple-icons:hackerone" },
-  { name: "dev-sec-ops", icon: "mdi:shield-check" },
+  // { name: "dev-sec-ops", icon: "mdi:shield-check" },
   { name: "burp-suite", icon: "simple-icons:burpsuite" },
   { name: "active-directory", icon: "mdi:microsoft-windows" },
   { name: "python", icon: "simple-icons:python" },
