--- a/src/components/ui/home/Presentation.astro
+++ b/src/components/ui/home/Presentation.astro
@@ -16,7 +16,8 @@ const { class: className = "" } = Astro.props;
     alt="Astro Logo"
     width="500"
     height="800"
-    class="rounded-full border-1 border-primary w-full bg-gradient-to-bl from-20% from-primary/80 to-accent/70 to-80%"
+    class="rounded-full w-full bg-gradient-to-bl from-20% from-primary/80 to-accent/70 to-80%"
+    loading="eager"
   />
   <h1 class="text-center text-3xl font-bold text-gray-50">
     Alejandro Hernández Padron
@@ -31,7 +32,7 @@ const { class: className = "" } = Astro.props;
     <BadgePresentation class="badge-success" name="Secure Code Reviewer" />
   </div>
   <ul
-    class="flex space-x-3 *:w-11 *:rounded-xl *:p-2 text-gray-50! drop-shadow-md bg-primary-content/30 drop-shadow-primary-content rounded-xl py-1 px-2"
+    class="flex space-x-3 *:w-11 *:rounded-xl *:p-2 text-gray-50! bg-base-100/80 rounded-xl py-1 px-2"
   >
     <li
       class="hover:bg-primary transition-all duration-300 ease-in-out hover:scale-103"
