--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -170,7 +170,7 @@ try {
             />
           </div>
           <div
-            class="grid xl:grid-cols-2 *:w-auto! lg:px-6 *:col-span-1 justify-between gap-5"
+            class="grid 2xl:grid-cols-2 *:w-auto! lg:px-6 *:col-span-1 justify-between gap-5"
           >
             <CardProject
               title="Astro-AleRaptor"
@@ -178,12 +178,11 @@ try {
               url="https://github.com/alehdezp/astro-aleraptor"
               descriptionList={[
                 "This website is built with Astro and TailwindCSS.",
-                "It features a blog section with a custom blog post page.",
-                "The blog posts are sorted by date and displayed in a timeline format.",
-                "The website also includes a portfolio section with a custom project page.",
-                "The projects are displayed in a grid format with a card layout.",
+                "Usess DaisyUI for the UI components.",
+                "Uses MDX for the blog posts.",
+                "Deployed to Vercel using vercel adapter",
               ]}
-              tags={["Astro", "TailwindCSS", "Markdown"]}
+              tags={["astro", "tailwindCSS", "md"]}
             />
           </div>
           <div class="divider px-10 md:px-80"></div>
