--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -19,10 +19,11 @@ import CardProject from "@components/ui/CardProject.astro";
         url="https://github.com/alehdezp/astro-aleraptor"
         descriptionList={[
           "This website is built with Astro and TailwindCSS.",
-          "Uses the Astro adapter for Deno.",
-          "Designed to be used as portfolio and blog website.",
+          "Usess DaisyUI for the UI components.",
+          "Uses MDX for the blog posts.",
+          "Deployed to Vercel using vercel adapter",
         ]}
-        tags={["Astro", "TailwindCSS", "Markdown"]}
+        tags={["astro", "tailwindCSS", "md"]}
       />
     </div>
   </div>
