--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,11 +20,29 @@ import backgroundImg from "@assets/background.jpg";
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <!-- Preload critical font files for performance -->
-    <link rel="preload" href="/fonts/MPLUSRounded1c-Regular.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="/fonts/MPLUSRounded1c-Medium.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="/fonts/MPLUSRounded1c-Bold.woff2" as="font" type="font/woff2" crossorigin />
+    <link
+      rel="preload"
+      href="/fonts/MPLUSRounded1c-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/MPLUSRounded1c-Medium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/MPLUSRounded1c-Bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
     <ClientRouter />
-    <title>Astro-AleRaptor</title>
+    <title>Dino Space Dive</title>
 
     <!-- Simple theme initialization -->
     <script is:inline>
