--- a/src/components/ui/blog/Pagination.astro
+++ b/src/components/ui/blog/Pagination.astro
@@ -13,7 +13,7 @@ const { currentPage, totalPages, baseUrl } = Astro.props;
     currentPage > 1 && (
       <a
         href={`${baseUrl}${currentPage - 1}`}
-        class="px-4 py-2 bg-gray-100 dark:bg-gray-800 rounded hover:bg-gray-200 dark:hover:bg-gray-700"
+        class="px-4 py-2 bg-gray-800 rounded  hover:bg-gray-700"
       >
         Previous
       </a>
@@ -23,7 +23,7 @@ const { currentPage, totalPages, baseUrl } = Astro.props;
     currentPage < totalPages && (
       <a
         href={`${baseUrl}${currentPage + 1}`}
-        class="px-4 py-2 bg-gray-100 dark:bg-gray-800 rounded hover:bg-gray-200 dark:hover:bg-gray-700"
+        class="px-4 py-2 bg-gray-800 rounded  hover:bg-gray-700"
       >
         Next
       </a>
