--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -31,9 +31,7 @@ const { title, date, tags, image } = post.data;
       )
     }
     <header class="mb-10">
-      <h1
-        class="sm:text-4xl text-3xl lg:text-5xl font-bold mb-4 text-gray-900 dark:text-gray-100"
-      >
+      <h1 class="sm:text-4xl text-3xl lg:text-5xl font-bold mb-4 text-gray-100">
         {title}
       </h1>
       <div class="mb-4">
@@ -42,16 +40,15 @@ const { title, date, tags, image } = post.data;
       {tags && <PostTags tags={tags} url_enabled={true} class="px-4 py-3 " />}
     </header>
     <div
-      class="text-wrap prose max-w-none prose-lg md:prose-lg dark:prose-invert
-       dark:prose-headings:text-gray-100
-      prose-p:text-gray-700 dark:prose-p:text-gray-300
-      prose-a:text-primary dark:prose-a:text-primary-400
-      hover:prose-a:text-primary-500 dark:hover:prose-a:text-primary-300
-      prose-strong:text-gray-900 dark:prose-strong:text-gray-100
-      prose-code:text-gray-300 dark:prose-code:text-gray-400
-      prose-blockquote:text-gray-700 dark:prose-blockquote:text-gray-300
-      prose-span:text-gray-700 dark:prose-span:text-gray-300
-      prose-li:text-gray-700 dark:prose-li:text-gray-300
+      class="text-wrap max-w-none prose-lg md:prose-lg prose-invert
+       prose-p:text-gray-300
+       prose-a:text-primary-400
+       hover:prose-a:text-primary-300
+       prose-strong:text-gray-100
+       prose-code:text-gray-400
+       prose-blockquote:text-gray-300
+       prose-span:text-gray-300
+       prose-li:text-gray-300
       prose-img:rounded-xl prose-headings:text-primary/95! prose-h1:text-base-content prose-h2:text-base-content prose-h3:text-accent-content
       prose-blockquote:w-20 prose-code:w-20
       prose-pre:bg-primary/14!"
