--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -21,9 +21,7 @@ const { page } = Astro.props;
 <Layout title="Blog Posts">
   <div class="mx-4 sm:mx-auto lg:mt-28 lg:w-200 w-auto mb-20">
     <div class="flex justify-between items-center ml-2 mb-16">
-      <h1 class="text-4xl font-bold text-gray-900 dark:text-white">
-        Blog Posts
-      </h1>
+      <h1 class="text-4xl font-bold text-white">Blog Posts</h1>
       <div class="flex items-center gap-8">
         <Icon id="hashtag" name="mdi:hashtag" class="w-6 h-6" />
         <SearchBox />
