--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,7 +8,7 @@ import CardProject from "@components/ui/CardProject.astro";
 <Layout title="Personal Projects">
   <div class="mx-4 w-auto h-auto sm:mx-auto lg:mt-28 mb-20 md:px-8 px-3">
     <div class="flex justify-between items-center ml-2 mb-16">
-      <h1 class="sm:text-4xl text-3xl font-bold text-gray-900 dark:text-white">
+      <h1 class="sm:text-4xl text-3xl font-bold text-white">
         Personal Projects
       </h1>
     </div>
