--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -26,7 +26,7 @@ const sortedPosts = sortPostsByDate(posts);
 <Layout title={`Posts tagged with #${tag}`}>
   <div class="mx-4 sm:mx-auto lg:mt-28 lg:w-200 w-auto mb-20">
     <div class="flex justify-between items-center ml-2 mb-16">
-      <h1 class="text-4xl font-bold text-gray-900 dark:text-white">
+      <h1 class="text-4xl font-bold text-white">
         Posts tagged with #{tag}
       </h1>
       <SearchBox />
