astro-aleraptor arrgh!

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -40,7 +40,7 @@ const { title, date, tags, image } = post.data;
       {tags && <PostTags tags={tags} url_enabled={true} class="px-4 py-3 " />}
     </header>
     <div
-      class="text-wrap max-w-none prose-lg md:prose-lg prose-invert
+      class="prose text-wrap max-w-none prose-lg md:prose-lg prose-invert
        prose-p:text-gray-300
        prose-a:text-primary-400
        hover:prose-a:text-primary-300
