--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -1,8 +1,8 @@
 ---
 // src/components/Icon.astro
-import { Icon } from "astro-icon/components";
+import { Icon } from 'astro-icon/components'
 
-const { name, size = 6 } = Astro.props;
+const { name, size = 6 } = Astro.props
 ---
 
 <Icon
