--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
 import "@styles/global.css";
-import Header from "@components/Header.astro";
+// import Header from "@components/Header.astro";
 import Navbar from "@components/Navbar.astro";
 import Footer from "@components/Footer.astro";
-import { ClientRouter, slide, fade } from "astro:transitions";
+import { ClientRouter } from "astro:transitions";
 import ThemeSwitch from "@components/ui/ThemeSwitch.astro";
-import backgroundImg from "@assets/background.jpg";
+// import backgroundImg from "@assets/background.jpg";
 ---
 
 <!doctype html>
@@ -20,10 +20,13 @@ import backgroundImg from "@assets/background.jpg";
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <!-- Google Fonts fallback for reliable font loading -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Preload critical font files as backup -->
     <link
       rel="preload"
