--- a/src/components/ui/home/Presentation.astro
+++ b/src/components/ui/home/Presentation.astro
@@ -2,7 +2,7 @@
 import PresentationItemList from "@components/ui/home/PresentationItemList.astro";
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import logo from "@assets/logo.png";
+import logo from "public/logo3.png";
 import { siteConfig } from "@/config.js";
 
 import BadgePresentation from "@components/ui/home/Badge-Presentation.astro";
