--- a/src/components/ui/Logo.astro
+++ b/src/components/ui/Logo.astro
@@ -1,7 +1,5 @@
 <div class="avatar">
-  <div
-    class="ring-secondary ring-offset-base-100 w-13 rounded-full ring ring-offset-2"
-  >
-    <img src="logo.png" />
+  <div class="ring-secondary ring-offset-base-100 w-13 rounded-full ring ring-offset-2">
+    <img src="logo2.png" />
   </div>
 </div>
